<resources>
    <string name="app_name">MoviesManager</string>
    <string name="nomefilme">Nome: </string>
    <string name="ano_Lancamento">Lançamento: </string>
    <string name="genero">Genero: </string>
    <string name="duracao">Duração: </string>
    <string name="nomeEt">"Nome: "</string>
    <string name="lancamentoEt">Lançamento: </string>
    <string name="estudioEt">Estudio: </string>
    <string name="produtoraEt">Produtora: </string>
    <string name="duracaoFilmeEt">Duração: </string>
    <string name="assistidoEt">Assistido: </string>
    <string name="notaFilmeEt">Nota: </string>
    <string-array name="generoFilmeSp">
        <item>Comedia</item>
        <item>Aventura</item>
        <item>Ação</item>
        <item>Terror</item>
        <item>Romance</item>
        <item>Drana</item>
        <item>Ficção Científica</item>
        <item>Suspense</item>
    </string-array>
    <string name="save">Salvar</string>
    <string name="adicionar_filmes">Adicionar Filme</string>
    <string name="remover_filme">Excluir</string>
    <string name="editar_filme">Editar</string>
</resources>