<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.FilmeActivity">

    <EditText
        android:id="@+id/nomeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nomeEt"
        android:layout_margin="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lancamentoEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lancamentoEt"
        android:layout_margin="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeEt"/>

    <EditText
        android:id="@+id/estudioEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estudioEt"
        android:layout_margin="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lancamentoEt"/>

    <EditText
        android:id="@+id/produtoraEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/produtoraEt"
        android:layout_margin="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estudioEt"/>

    <EditText
        android:id="@+id/duracaoFilmeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/duracaoFilmeEt"
        android:layout_margin="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/produtoraEt"/>

    <CheckBox
        android:id="@+id/assistidoCk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/assistidoEt"
        android:layout_margin="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/duracaoFilmeEt"/>

    <EditText
        android:id="@+id/notaFilmeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notaFilmeEt"
        android:layout_margin="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/assistidoCk"/>

    <Spinner
        android:id="@+id/generoFilmeSp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:entries="@array/generoFilmeSp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notaFilmeEt" />

    <Button
        android:id="@+id/saveFilmeBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generoFilmeSp" />

</androidx.constraintlayout.widget.ConstraintLayout>